# SystemProgramming

./: index.html
Differentiator/: .gitignore  CMakeLists.txt  Makefile  expressionTree.c  main.c
Differentiator/includes/: expressionTree.h  graphviz.h
Differentiator/lib/: CMakeLists.txt  Tree2Latex.c  config.h  differentiator.c  optimizer.c  treeCalculate.c  treeDump.c  treeParse.c  utilities.c
Differentiator/lib/includes/: expressionTree.h  service.h
Differentiator/tests/: CMakeLists.txt  main_test.c
List/: .gitignore
List/includes/: list.h
List/tests/: tests.c
Onegin/: .gitignore  Makefile  README.md  annotated.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  fileUtilities.c  file_utilities_8h.html  file_utilities_8h_source.html  files.html  globals.html  globals_func.html  index.html  main.c  struct___parsed_buffer-members.html  struct___parsed_buffer.html  struct___string-members.html  struct___string.html  struct_file___api__v1__0-members.html  struct_file___api__v1__0.html
Onegin/includes/: fileUtilities.h
Onegin/search/: all_1.js  (+8 more)
QuadEq/: annotated.html  classes.html  dir_163036daf42c6719675d2a3a8abff856.html  dir_cfb9c75527f84db43061b847403a3a3c.html  equation_8h.html  equation_8h_source.html  files.html  globals.html  globals_func.html  index.html  md__r_e_a_d_m_e.html  pages.html  struct_equation___api__v1__0-members.html  struct_equation___api__v1__0.html
Quadratic-equation/: .gitignore  Makefile  README.md  main.c
Stack/: .gitignore  CMakeLists.txt  Makefile  README.md
Stack/tests/: CMakeLists.txt  stackTests.c
(+10 files in other folders)
